@@ -779,3 +779,33 @@ DEFINE_TESTCASE(stubdb7, !backend) {
 		   Xapian::Auto::open_stub("nosuchdirectory", Xapian::DB_OPEN));
     return true;
 }
+
+/// Test which checks the weights are as expected.
+//  This runs for multi_* too, so serves to check that we get the same weights
+//  with multiple databases as without.
+DEFINE_TESTCASE(msetweights1, backend) {
+    Xapian::Database db = get_database("apitest_simpledata");
+    Xapian::Enquire enq(db);
+    Xapian::Query q(Xapian::Query::OP_OR,
+		    Xapian::Query("paragraph"),
+		    Xapian::Query("word"));
+    enq.set_query(q);
+    // 5 documents match, and the 4th and 5th have the same weight, so ask for
+    // 4 as that's a good test that we get the right one in this case.
+    Xapian::MSet mset = enq.get_mset(0, 4);
+
+    static const struct { Xapian::docid did; double wt; } expected[] = {
+	{ 2, 1.2058248004573934864 },
+	{ 4, 0.81127876655507624726 },
+	{ 1, 0.17309550762546158098 },
+	{ 3, 0.14609528172558261527 }
+    };
+
+    TEST_EQUAL(mset.size(), sizeof(expected) / sizeof(expected[0]));
+    for (size_t i = 0; i < mset.size(); ++i) {
+	TEST_EQUAL(*mset[i], expected[i].did);
+	TEST_EQUAL_DOUBLE(mset[i].get_weight(), expected[i].wt);
+    }
+
+    return true;
+}
