@@ -1,3 +1,8 @@
+Tue Nov 20 07:04:55 GMT 2012  Olly Betts <olly@survex.com>
+
+	* tests/api_backend.cc: Add testcase msetweights1 which checks we
+	  get the weights we expect for a two term query.
+
 Mon Nov 19 21:17:33 GMT 2012  Olly Betts <olly@survex.com>
 
 	* queryparser/termgenerator.cc: TermGenerator internal member can
